apps/excalidraw/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: excalidraw
spec:
  selector:
    app: excalidraw
  ports:
    - port: 80
      targetPort: 80
